# ShamirSecretSharing

./: .gitignore  .travis.yml
c/: CMakeLists.txt  build.py
c/src/: shamir.c  shamir.h
c/tests/: test.h  test1.c  test2.c
python/ShamirSecretSharing/: core.py
